--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "dependencies": {
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "react-router": "^3.0.3",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
