--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
@@ -25,8 +26,7 @@
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.9",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.5.0",
-    "webpack-livereload-plugin": "^0.11.0"
+    "webpack-dev-server": "^2.5.0"
   },
   "repository": {
     "type": "git",
